--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,5 +2,7 @@ $color-green: #a4ffaf;
 $color-yellow: #f8cd65;
 $color-orange: #fb7c58;
 $color-red: #f64a4a;
+$color-container: #24232c;
+$color-border: #3f3f3f;
 
 $gradient-bg: linear-gradient(90deg, rgba(20, 19, 27, 1) 0%, rgba(8, 7, 11, 1) 100%);
