feat: complete password generator project

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -75,3 +75,9 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+@media screen and (max-width: 540.1px) {
+  html {
+    font-size: 8px;
+  }
+}
