--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -55,6 +55,27 @@
   &__copy {
     display: flex;
     align-items: center;
+    column-gap: 1rem;
+
+    overflow: hidden;
+  }
+
+  &__copyText {
+    font-size: 1.8rem;
+    color: v.$color-green;
+    transform: translateY(20rem);
+    transition: transform 0.4s ease;
+
+    &.success {
+      transform: translateY(0rem);
+    }
+  }
+
+  &__copyButton {
+    position: relative;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
     justify-content: center;
 
     background-color: transparent;
@@ -170,6 +191,10 @@
   &__strengthValue {
     color: #fff;
     font-size: 2.2rem;
+
+    @media screen and (max-width: 375.1px) {
+      display: none;
+    }
   }
 
   &__strengthScales {
@@ -182,6 +207,26 @@
     width: 0.9rem;
     height: 2.5rem;
     border: 0.1rem solid #fff;
+
+    &--red {
+      background-color: v.$color-red;
+      border-color: v.$color-red;
+    }
+
+    &--orange {
+      background-color: v.$color-orange;
+      border-color: v.$color-orange;
+    }
+
+    &--yellow {
+      background-color: v.$color-yellow;
+      border-color: v.$color-yellow;
+    }
+
+    &--green {
+      background-color: v.$color-green;
+      border-color: v.$color-green;
+    }
   }
 
   &__button {
